--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google-cloud/local-auth": "^2.1.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.42.4",
+    "@vercel/blob": "^0.22.3",
     "dotenv": "^16.4.5",
-    "googleapis": "^105.0.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
